--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,1 +1,17 @@
+on:
+  push:
+    branches:
+      - test
 
+
+
+
+
+jobs:
+  build:
+    runs-on: ubuntu-latest
+
+
+    steps:
+      - name: 'mostafa ibrahim mostafa'
+        run: pwd
