--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,7 +11,8 @@ jobs:
   build:
     runs-on: ubuntu-latest
 
-
     steps:
       - name: 'mostafa ibrahim mostafa'
         run: pwd
+
+      - uses: actions/checkout@v3
