--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,3 +16,11 @@ jobs:
         run: pwd
 
       - uses: actions/checkout@v3
+      - name: "login to docker hub"
+        run: docker login --username ${{ secrets.DOCKER_USERNAME }} --password ${{ secrets.DOCKER_TOKEN }}
+
+        -name: "build docker image"
+         run: docker build -t ${{ secrets.DOCKER_USERNAME }}/task .
+
+         -name: "push to docker hub"
+          run : docker push ${{ secrets.DOCKER_USERNAME }}/task
